# glassy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  MODULARIZATION_PLAN.md  Makefile  README.md  ROADMAP.md  index.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Casks/: glassy.rb  glassy.rb.tmpl
Formula/: glassy.rb  glassy.rb.tmpl
assets/icons/: glassy-pink.icns  glassy.icns
benches/: hot_paths.rs
deb/: InRelease  Packages  Release  Release.gpg  glassy-archive-keyring.asc  glassy_0.4.0_amd64.deb  glassy_0.4.1_amd64.deb  glassy_0.4.2_amd64.deb  glassy_0.4.3_amd64.deb  glassy_0.4.4_amd64.deb  glassy_0.5.0_amd64.deb  glassy_0.6.0_amd64.deb  glassy_0.6.1_amd64.deb
docs/: benchmarks.md  gui-toolkit-matrix.md  gui-toolkit-spike.md  plugins.md  quake-mode.md
extra/: glassy.1  glassy.desktop
packaging/: glassy.repo
packaging/aur/: .SRCINFO  PKGBUILD  PKGBUILD-bin
packaging/deb/: postinst
packaging/flatpak/: io.github.alliecatowo.glassy.desktop  io.github.alliecatowo.glassy.metainfo.xml  io.github.alliecatowo.glassy.yaml
packaging/homebrew/: glassy.rb  glassy.rb.tmpl
packaging/rpm/: glassy.spec
packaging/scripts/: postinst.sh
rpm/: glassy-0.4.0-1.x86_64.rpm  glassy-0.4.1-1.x86_64.rpm  glassy-0.4.2-1.x86_64.rpm  glassy-0.4.3-1.x86_64.rpm  glassy-0.4.4-1.x86_64.rpm  glassy-0.5.0-1.x86_64.rpm  glassy-0.6.0-1.x86_64.rpm  glassy-0.6.1-1.x86_64.rpm
rpm/repodata/: 066c3b8d147d6acb963c455df4889a43d1a9a8b0eb98be423793c61fcf0219ef-other.sqlite.bz2  0bd830b02ce86c9b367287fb97cefcd7f21aa978d6481edb4658468ff5e2f46d-other.sqlite.bz2  0c485ee339512768f465daad8f61c5a49390d61c0086524987ad1a325219c7d6-primary.sqlite.bz2  185081cf2d4fed429a4d56ba1ff53e5c054ffe03ecae78ff59a2043ea6225248-primary.sqlite.bz2  1eaa55d7a82d5bc810b2d21f3d8c33d2e2d0ae0b17db5d4e6d70d8033abd4fcd-other.sqlite.bz2  26fd0998e6ec4903595aeaf79e139c95cafd28656e0243e48e4153f1c24b0d09-filelists.sqlite.bz2  2713c187179dadc4e9f41bad40ab169aecd0f5ba0aa43ec4370fdbe638a293e3-filelists.sqlite.bz2  2ec515748f9b6150f89e87ab9896ef8fba6f2fdd95b5146a588c30b4b994b828-filelists.sqlite.bz2  3ee5f9d535668ddc6a58946be936ce399209691fab827813a6673f9ad7404846-primary.sqlite.bz2  4e775680f999ea8f3cede6eae8baa43ad8798757ac34c6eb5c46e0d44d5bada9-filelists.sqlite.bz2  5037c18134f0b84ba17541ef70023eb954af13f8eb670d4d2544cb206b0dee57-other.sqlite.bz2  56a8e54c633aa2f3345f81493c95db8cc8fc95f75018737047cef383e17b9268-other.sqlite.bz2  5db53e96b71fdf9551795ee5cbf86b99ced2938eec1770834cfe4e24999de917-primary.sqlite.bz2  69ede8a1d79b3051c1fb032f633e56cfd94ce2fa24e41400985ecb117ec8d9d1-filelists.sqlite.bz2  7fea4893f315a3a587345c16f4da1f9b801760f6470cd643ae069b8b245abb0e-primary.sqlite.bz2  8146134d67b98c2c90a4e2d1dbb0733623b5db075abab1548c023296ee6f9466-other.sqlite.bz2  95fa0b879d566d6767616368e4d83e666205510ef3657100b24b4281d0a4fe42-primary.sqlite.bz2  a03cb49c5c29345148c91a0ee8fd8dc21322499a169d034391a198a66229a496-primary.sqlite.bz2  a2fc89b65996047eddea6ecb72fde21cc5e8a2198aa7af58bb3449c3571006c4-other.sqlite.bz2  a33ad46ed45866fd0e4fc30c1ed31baba2779447cf1bc65d9748d90844995844-filelists.sqlite.bz2  b1ff4e2ac1ca61f34a8742e32e1e94b46a561fd0165c760158c2aa601a57f4c6-filelists.sqlite.bz2  bfb3e8c58756b227df2a24d689c5690ea276273359988ee4a456671fffbeac36-filelists.sqlite.bz2  c3c1841eee4675203410a3fa575fa697511cd14d7b39c3f2651917c9bbcc5639-primary.sqlite.bz2  d1c755573973ed106788d0c89712734d2ba4a11a7034424303468aa54712d412-filelists.sqlite.bz2  d450b8bfccfd3c45d37d36e1af27347475ed809708c093c0d5c9dd2ad3463dd9-other.sqlite.bz2  e2fa97c56349ffbc143bcbc39f39c44b8af658b741478bc560ed4c2ba8d24c8d-other.sqlite.bz2  e5df6fef1d2bd4733d3b7e4e30aa6b59b619a664816d872c9be96d8bb41ff3f2-primary.sqlite.bz2  f260a785ef1a02a11967d47ecf7b8cbe3bd328eeecc64142ae59049293f4343a-primary.sqlite.bz2  f290d55287e751709d5b319af39b389d6282d8fabd7a90005a2a26b244140911-other.sqlite.bz2  f5b32c62b6be4235ec5fb763cc4ac1ab5c479f70c0a7059c7a2f1f78931f4019-other.sqlite.bz2  f75d3677b70e1ed12ca7d2601f998d8856abfbf6b79fc9973420703ce5596d6e-primary.sqlite.bz2  f7d58a2c10b5f68c65975630c786696fb9c6d3f2034d655876b025ec1d2d585f-filelists.sqlite.bz2  fe3123008bf9d68fb7b1afe44234d310e914e026b5c9ee5e36b4657278174d47-filelists.sqlite.bz2  repomd.xml  repomd.xml.asc
scripts/: bench.sh  install.sh
shell-integration/: README.md  glassy.bash  glassy.fish  glassy.zsh
src/: app.rs  bell.rs  color.rs  config.rs  gui.rs  image.rs  input.rs  lib.rs  main.rs  pane.rs  pty.rs  renderer.rs  session.rs  shader.wgsl  text.rs
src/app/: chrome.rs  command_blocks.rs  dragdrop.rs  event_loop.rs  headless_input.rs  helpers.rs  hints.rs  ime.rs  input.rs  keys.rs  keyseq.rs  mac_menu.rs  minimap.rs  mod.rs  modhold.rs  mouse.rs  multipane.rs  palette.rs  pane_ops.rs  panes.rs  peek.rs  power.rs  quake.rs  remote.rs  render.rs  script.rs  search.rs  selection.rs  settings.rs  settings_fields.rs  settings_save.rs  settings_themes.rs  strip.rs  system_theme.rs  tab_paint.rs  tabs.rs  tests.rs  toast.rs  user_event.rs  vi_mode.rs
src/app/chrome/: confirm.rs  mod.rs  settings_form.rs  status_bar.rs
src/app/mouse/: button.rs  mod.rs  wheel.rs
src/app/palette/: fuzzy.rs  history.rs  mod.rs  paint.rs  save_scrollback.rs
src/app/tabs/: ctxmenu.rs  menu.rs  mod.rs  (+2 more)
src/color/: builtin.rs  mod.rs  registry.rs  user_themes.rs
src/config/: cli.rs  keymap.rs  mod.rs  parse.rs  platform.rs  theme_gen.rs  theme_import.rs
src/gui/: chrome.rs  help.rs  mod.rs  settings_panel.rs  textedit.rs  textinput.rs  widgets.rs
src/image/: mod.rs  notify.rs  parser.rs  store.rs
src/ipc/: control.rs  mod.rs
src/pane/: layout.rs  mod.rs  tree.rs  zoom.rs
src/pty/: cmdzone.rs  loop.rs  mod.rs  overline.rs  scan.rs
src/renderer/: cell.rs  crt.rs  cursor_trail.rs  effect.rs  frame.rs  geometry.rs  image_draw.rs  init.rs  mod.rs  multipane.rs  opacity.rs  overlay.rs  pipeline.rs  tests.rs
src/text/: discover.rs  mod.rs  presentation.rs  shape.rs
terminfo/: README.md  glassy.terminfo
