[package]
name = "glassy"
version = "0.1.0"
edition = "2024"

[dependencies]
polling = "3.11"
png = "0.17"
alacritty_terminal = "0.26.0"
anyhow = "1.0.102"
# default-features off drops the `image` crate (png/tiff/jpeg/ICC decoders) we
# never use — glassy only calls set_text/get_text. Big binary + build-time win.
# Keep wayland-data-control so the clipboard works natively on Wayland sessions.
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
cosmic-text = "0.19.0"
# default-features off drops regex + jiff + anstream (colored/timestamped output
# and regex RUST_LOG filters) — module-path level filtering still works.
env_logger = { version = "0.11.10", default-features = false }
log = "0.4.32"
pollster = "0.4.0"
rustix = "1.1.4"
wgpu = "29.0.3"
winit = "0.30.13"

# Audible bell. Optional + off by default: the audio backend (cpal/alsa) needs
# system audio dev libraries to build, so we keep the dependency behind a feature
# rather than imposing that on every build. When the feature is not compiled in,
# the audible bell is a no-op (logged once). `bell_audible` still parses from the
# config regardless; it only takes effect in a `--features bell-audio` build.
rodio = { version = "0.22.2", default-features = false, features = ["playback"], optional = true }

[features]
# Compile in the audible-bell backend. Requires audio dev libs (e.g. alsa-lib-devel
# on Fedora / libasound2-dev on Debian) at build time.
bell-audio = ["dep:rodio"]

# Ultra-lean release build: this is core to the "faster/lighter than ghostty" goal.
# fat LTO + single codegen unit maximize inlining across crates; abort-on-panic
# drops the unwinding machinery; strip shrinks the binary.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# A faster-iterating profile for dev that still optimizes deps (wgpu/cosmic-text
# are painfully slow unoptimized) but keeps our own crate quick to recompile.
[profile.dev.package."*"]
opt-level = 3

# ---------------------------------------------------------------------------
# Debian / Ubuntu packaging (cargo-deb).
#
# This metadata is inert for normal `cargo build`; it only takes effect when
# building a .deb with `cargo deb` (install it first: `cargo install cargo-deb`).
# It installs the release binary, the hicolor icon set, the .desktop entry, and
# the man page, and declares the shared-library runtime dependencies glassy
# links against (GUI/GPU/audio/text stack).
# ---------------------------------------------------------------------------
[package.metadata.deb]
maintainer = "Allie <allisonemilycoleman@gmail.com>"
copyright = "2026, Allie <allisonemilycoleman@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
glassy is a small, fast, GPU-accelerated terminal emulator written in Rust. \
It draws the grid with an instanced wgpu renderer fed by a dynamic glyph atlas, \
and supports 24-bit truecolor, color emoji, procedural box-drawing, mouse \
reporting, selection, clipboard, scrollback, OSC 8 hyperlinks, tabs, window \
decorations, configurable cursor, translucency, and themeable config."""
section = "x11"
priority = "optional"
# Runtime shared libraries glassy links against. cargo-deb also auto-detects
# some of these via dpkg-shlibdeps, but we pin the key ones explicitly so the
# package is installable on a clean system.
depends = "libc6, libxkbcommon0, libwayland-client0, libvulkan1, libasound2, libfontconfig1, libgcc-s1"
assets = [
    ["target/release/glassy", "usr/bin/", "755"],
    ["assets/icons/glassy-16.png", "usr/share/icons/hicolor/16x16/apps/glassy.png", "644"],
    ["assets/icons/glassy-32.png", "usr/share/icons/hicolor/32x32/apps/glassy.png", "644"],
    ["assets/icons/glassy-48.png", "usr/share/icons/hicolor/48x48/apps/glassy.png", "644"],
    ["assets/icons/glassy-64.png", "usr/share/icons/hicolor/64x64/apps/glassy.png", "644"],
    ["assets/icons/glassy-128.png", "usr/share/icons/hicolor/128x128/apps/glassy.png", "644"],
    ["assets/icons/glassy-256.png", "usr/share/icons/hicolor/256x256/apps/glassy.png", "644"],
    ["assets/icons/glassy-512.png", "usr/share/icons/hicolor/512x512/apps/glassy.png", "644"],
    ["extra/glassy.desktop", "usr/share/applications/glassy.desktop", "644"],
    ["extra/glassy.1", "usr/share/man/man1/glassy.1", "644"],
]
